# aqueduct

./: .env.example  .gitignore  20260202-TODO-gmail-workflow.md  CLAUDE.md  GMAIL_WORKFLOW_SUMMARY.md  README.md  TODO.md  WORKFLOW_STATUS.md  pyproject.toml
.claude/agents/: idempotency-guardian.md  workflow-builder.md  workflow-testing-agent.md
blocks/: amazon_block.py  discord_block.py  github_block.py  gmail_block.py  google_drive_block.py  google_photos_block.py  instagram_block.py  reddit_block.py  twitter_block.py
config/: crunchyroll_series.json
docs/: CREDENTIALS_SETUP.md  GOOGLE_PHOTOS_SETUP.md  WORKFLOW_AUTOMATION_STATUS.md  WORKFLOW_FIXES_SUMMARY.md
docs/amazon/: SETUP.md
docs/google-drive/: FIXES_NEEDED.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  TEST_REPORT.md  docs.md  plan.md  todo.md
docs/reddit/: docs.md  plan.md  setup.md  todo.md
infra/: README.md  bootstrap-server.sh
infra/k8s/: README.md
infra/k8s/apps/app-of-apps/: Chart.yaml  prod.yaml  test.yaml
infra/k8s/apps/app-of-apps/templates/: #helm-apps.yaml#  helm-apps.yaml
infra/k8s/apps/common/manifests/misc/: wildcard-cert.yaml
infra/k8s/apps/common/manifests/secrets/: .gitkeep
infra/k8s/apps/common/prod-manifests/: .gitkeep
infra/k8s/apps/common/remote-helm-repos/: cert-manager.yaml  ingress-nginx.yaml  prometheus-stack.yaml
infra/k8s/apps/common/test-manifests/: .gitkeep
infra/k8s/apps/example-app/: Chart.yaml  values-test.yaml  values.yaml
infra/k8s/apps/example-app/templates/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
infra/k8s/scripts/: new-app.sh
scripts/: save_instagram_cookies.py  setup_amazon_block.py  setup_gmail.py  setup_google_drive_block.py  setup_reddit_block.py  synology_list_dirs.py
workflows/: GMAIL_README.md  README.md  amazon.py  crunchyroll.py  discord.py  example.py  github.py  gmail.py  google_drive.py  google_photos.py  instagram.py  notion.py  reddit.py  twitter.py  youtube.py
workflows/cannot-automate/: README.md
