[project]
name = "aqueduct"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "flask>=3.0.0",
    "google-api-python-client>=2.110.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "graphviz>=0.21",
    "instaloader>=4.10",
    "notion-client>=2.2.1",
    "pdbpp>=0.11.7",
    "prefect[github]>=3.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "synology-api>=0.6.0",
    "xdk>=0.5.0",
    "twilio>=9.0.0",
    "yt-dlp>=2024.12.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "aqueduct"
registry_modules = [
    "aqueduct.components.*",
]


